--- a/arch_install/roles/locale/tasks/main.yml
+++ b/arch_install/roles/locale/tasks/main.yml
@@ -6,5 +6,8 @@
 - name: Set localgen fr
   locale_gen: name=fr_FR.UTF-8 state=present
 
+- name: Set locale.conf
+  copy: src=files/locale.conf dest=/etc/locale.conf
+
 - name: Set vconsole
   copy: src=files/vconsole.conf dest=/etc/vconsole.conf
